<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile"
        android:title="Profile" />

    <item
        android:id="@+id/navigation_apply"
        android:icon="@drawable/ic_home"
        android:title="Apply" />

...
