...
        android:textSize="30dp"
        android:textColor="#000000">
    </TextView>


    <Button
        android:id="@+id/main_login_btn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Login"
        android:textSize="30sp"
        android:textColor="#ff0000">
...
